--- a/layout/fragment_profile.xml
+++ b/layout/fragment_profile.xml
@@ -57,6 +57,7 @@
 
 
         <EditText
+            android:id="@+id/et_profile_name"
             android:layout_width="380dp"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
@@ -89,6 +90,7 @@
             android:background="@drawable/icon_pen" />
 
         <EditText
+            android:id="@+id/et_profile_email"
             android:layout_width="380dp"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
@@ -121,6 +123,7 @@
             android:background="@drawable/icon_pen" />
 
         <EditText
+            android:id="@+id/et_profile_phone"
             android:layout_width="380dp"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
