--- a/layout/fragment_about_app.xml
+++ b/layout/fragment_about_app.xml
@@ -54,10 +54,11 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/tv_about_app"
         android:layout_width="336dp"
         android:layout_height="293dp"
         android:layout_marginStart="38dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="11dp"
         android:layout_marginBottom="436dp"
         android:fontFamily="@font/roboto"
