--- a/layout/fragment_help.xml
+++ b/layout/fragment_help.xml
@@ -66,6 +66,7 @@
 
         />
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/help_question1"
         android:layout_width="340dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
@@ -92,6 +93,7 @@
         android:layout_marginBottom="604dp"
         />
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/help_question2"
         android:layout_width="340dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
@@ -118,6 +120,7 @@
         android:src="@drawable/icon_small_arrow" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/help_question3"
         android:layout_width="340dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
@@ -144,6 +147,7 @@
         android:src="@drawable/icon_small_arrow" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/help_question4"
         android:layout_width="340dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
