--- a/layout/fragment_purchase_history_after.xml
+++ b/layout/fragment_purchase_history_after.xml
@@ -54,7 +54,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="380dp"
-        android:layout_height="565dp"
+        android:layout_height="441dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="165dp"
         android:layout_marginEnd="12dp"
@@ -159,56 +159,55 @@
             android:layout_marginEnd="280dp"
             android:layout_marginBottom="35dp"
             android:background="@drawable/img_product1" />
+
         <TextView
             android:id="@+id/tv_profile_product_name1"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginTop="150dp"
             android:layout_marginStart="90dp"
+            android:layout_marginTop="150dp"
             android:layout_marginEnd="149dp"
             android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
             android:text="Молоко паст. 2,5%"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginTop="170dp"
-            android:layout_marginStart="90dp"
-            android:layout_marginEnd="149dp"
-            android:layout_marginBottom="551dp"
-            android:hint="930 ml"
-            android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginTop="190dp"
             android:layout_marginStart="90dp"
+            android:layout_marginTop="170dp"
             android:layout_marginEnd="149dp"
             android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
+            android:hint="930 ml"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="190dp"
+            android:layout_marginEnd="149dp"
+            android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
             android:text="1x"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
+
         <TextView
             android:layout_width="70dp"
             android:layout_height="20dp"
-            android:layout_marginTop="150dp"
             android:layout_marginStart="300dp"
+            android:layout_marginTop="150dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
             android:text="122 KGS"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/img_product_profile2"
@@ -224,52 +223,50 @@
             android:id="@+id/tv1_product_status"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginTop="250dp"
             android:layout_marginStart="90dp"
+            android:layout_marginTop="250dp"
             android:layout_marginEnd="149dp"
             android:layout_marginBottom="455dp"
             android:fontFamily="@font/roboto"
-            android:textColor="@color/black"
             android:text="Греческий йогурт"
-            android:textSize="12sp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginTop="270dp"
-            android:layout_marginStart="90dp"
-            android:layout_marginEnd="149dp"
-            android:layout_marginBottom="551dp"
-            android:hint="907 ml"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginTop="290dp"
             android:layout_marginStart="90dp"
+            android:layout_marginTop="270dp"
             android:layout_marginEnd="149dp"
             android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
+            android:hint="907 ml"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="290dp"
+            android:layout_marginEnd="149dp"
+            android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
             android:text="1x"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
+
         <TextView
             android:layout_width="70dp"
             android:layout_height="20dp"
-            android:layout_marginTop="250dp"
             android:layout_marginStart="300dp"
+            android:layout_marginTop="250dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
             android:text="122 KGS"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/img_product_profile3"
@@ -280,6 +277,7 @@
             android:layout_marginEnd="280dp"
             android:layout_marginBottom="35dp"
             android:background="@drawable/img_product3" />
+
         <TextView
             android:id="@+id/tv1_product_price"
             android:layout_width="129dp"
@@ -291,45 +289,43 @@
             android:fontFamily="@font/roboto"
             android:text="Сметана Ключевское"
             android:textColor="@color/black"
-            android:textSize="12sp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginTop="370dp"
-            android:layout_marginStart="90dp"
-            android:layout_marginEnd="149dp"
-            android:layout_marginBottom="551dp"
-            android:hint="907 ml"
-            android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginTop="390dp"
             android:layout_marginStart="90dp"
+            android:layout_marginTop="370dp"
             android:layout_marginEnd="149dp"
             android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
+            android:hint="907 ml"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="390dp"
+            android:layout_marginEnd="149dp"
+            android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
             android:text="1x"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
+
         <TextView
             android:layout_width="70dp"
             android:layout_height="20dp"
-            android:layout_marginTop="350dp"
             android:layout_marginStart="300dp"
+            android:layout_marginTop="350dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="551dp"
+            android:fontFamily="@font/roboto"
             android:text="135 KGS"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
     </com.google.android.material.card.MaterialCardView>
 
