--- a/layout/fragment_purchase_history_blank.xml
+++ b/layout/fragment_purchase_history_blank.xml
@@ -64,6 +64,7 @@
         />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/orderBtn"
         android:layout_width="157dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
